force-app/main/default/objects/AccountPlanWalletSizing__c/AccountPlanWalletSizing__c.object-meta.xml
<CustomObject>
    <label>Account Plan Wallet Sizing</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>AccountPlanWalletSizing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccountPlanWalletSizings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>