force-app/main/default/objects/AccountPlanWalletSizing__c/fields/AccountId_PE__c.field-meta.xml
<CustomField>
    <fullName>AccountId_PE__c</fullName>
    <description>AccountId PE</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>AccountId PE</inlineHelpText>
    <label>AccountId PE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>