force-app/main/default/objects/AccountPlanWalletSizing__c/fields/AccountNamePE__c.field-meta.xml
<CustomField>
    <fullName>AccountNamePE__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>AccountNamePE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>