force-app/main/default/objects/AccountPlanWalletSizing__c/fields/ASFee__c.field-meta.xml
<CustomField>
    <fullName>ASFee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ASFee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>