force-app/main/default/objects/AccountPlanWalletSizing__c/fields/BAFee__c.field-meta.xml
<CustomField>
    <fullName>BAFee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>BAFee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>