force-app/main/default/objects/AccountPlanWalletSizing__c/fields/CashFee__c.field-meta.xml
<CustomField>
    <fullName>CashFee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CashFee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>