force-app/main/default/objects/AccountPlanWalletSizing__c/fields/CreditFee__c.field-meta.xml
<CustomField>
    <fullName>CreditFee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CreditFee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>