force-app/main/default/objects/AccountPlanWalletSizing__c/fields/DerivativeFee__c.field-meta.xml
<CustomField>
    <fullName>DerivativeFee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DerivativeFee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>