force-app/main/default/objects/AccountPlanWalletSizing__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>