force-app/main/default/objects/AccountPlanWalletSizing__c/fields/FXFee__c.field-meta.xml
<CustomField>
    <fullName>FXFee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FXFee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>