force-app/main/default/objects/AccountPlanWalletSizing__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Master</label>
    <referenceTo>Group__c</referenceTo>
    <relationshipName>AccountPlanWalletSizings</relationshipName>
    <type>Lookup</type>
</CustomField>