force-app/main/default/objects/AccountPlanWalletSizing__c/fields/IBFee__c.field-meta.xml
<CustomField>
    <fullName>IBFee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>IBFee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>