force-app/main/default/objects/AccountPlanWalletSizing__c/fields/IsGroupPerformance__c.field-meta.xml
<CustomField>
    <fullName>IsGroupPerformance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsGroupPerformance</label>
    <type>Checkbox</type>
</CustomField>