force-app/main/default/objects/AccountPlanWalletSizing__c/fields/IsGroupWallet__c.field-meta.xml
<CustomField>
    <fullName>IsGroupWallet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsGroupWallet</label>
    <type>Checkbox</type>
</CustomField>