force-app/main/default/objects/AccountPlanWalletSizing__c/fields/IsProductStrategy__c.field-meta.xml
<CustomField>
    <fullName>IsProductStrategy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsProductStrategy</label>
    <type>Checkbox</type>
</CustomField>