force-app/main/default/objects/AccountPlanWalletSizing__c/fields/LGFee__c.field-meta.xml
<CustomField>
    <fullName>LGFee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>LGFee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>