force-app/main/default/objects/AccountPlanWalletSizing__c/fields/NonRecurringFee__c.field-meta.xml
<CustomField>
    <fullName>NonRecurringFee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NonRecurringFee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>