force-app/main/default/objects/AccountPlanWalletSizing__c/fields/RecurringFee__c.field-meta.xml
<CustomField>
    <fullName>RecurringFee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RecurringFee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>