force-app/main/default/objects/AccountPlanWalletSizing__c/fields/RefreshDate__c.field-meta.xml
<CustomField>
    <fullName>RefreshDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RefreshDate</label>
    <type>DateTime</type>
</CustomField>