force-app/main/default/objects/AccountPlanWalletSizing__c/fields/SummaryType__c.field-meta.xml
<CustomField>
    <fullName>SummaryType__c</fullName>
    <label>SummaryType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WalletSizing</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>TargetbyGroup</fullName>
            </value>
            <value>
                <fullName>ActualNI</fullName>
            </value>
            <value>
                <fullName>AdjustedNI</fullName>
            </value>
            <value>
                <fullName>ExistingSOW</fullName>
            </value>
            <value>
                <fullName>AspirationSOW</fullName>
            </value>
            <value>
                <fullName>ExpectedIncrementalNI</fullName>
            </value>
            <value>
                <fullName>ExpectedIncrementalNIStep5</fullName>
            </value>
            <value>
                <fullName>TotalCompanyNI</fullName>
            </value>
            <value>
                <fullName>ExpectedSOW</fullName>
            </value>
            <value>
                <fullName>AspirationSOWStep6</fullName>
            </value>
            <value>
                <fullName>CompareExpectedtoAspirationSOW</fullName>
            </value>
            <value>
                <fullName>ExpectedIncrementalNIStep6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>