force-app/main/default/objects/AccountPlanWalletSizing__c/fields/TargetbyGroup__c.field-meta.xml
<CustomField>
    <fullName>TargetbyGroup__c</fullName>
    <label>TargetbyGroup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>