force-app/main/default/objects/AccountPlanWalletSizing__c/fields/TFFee__c.field-meta.xml
<CustomField>
    <fullName>TFFee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TFFee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>